--- a/app/src/main/res/layout-land/tv_activity_home.xml
+++ b/app/src/main/res/layout-land/tv_activity_home.xml
@@ -1,7 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/tv_layout_bg"
     android:orientation="vertical">
 
     <include layout="@layout/tv_include_header" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/d16"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="@dimen/d0"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/d0"
+                android:layout_weight="1"
+                android:background="@color/grey"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/d16"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/tv_star_need"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/tv_currency_key"
+                        android:gravity="center"
+                        android:text="@string/str_star"
+                        android:textColor="@color/red" />
+
+                    <TextView
+                        android:id="@+id/tv_currency_key"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignRight="@+id/tv_account_address_key"
+                        android:gravity="center|right"
+                        android:text="@string/currency"
+                        android:textColor="@color/white" />
+
+                    <Button
+                        android:id="@+id/tv_currency"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@+id/tv_currency_key"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/d10"
+                        android:layout_toRightOf="@+id/tv_currency_key"
+                        android:background="@drawable/tv_button_selector"
+                        android:drawablePadding="@dimen/d5"
+                        android:drawableRight="@mipmap/icon_select_white"
+                        android:gravity="center"
+                        android:textColor="@color/white" />
+
+                    <TextView
+                        android:id="@+id/tv_balance_key"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignRight="@+id/tv_account_address_key"
+                        android:layout_below="@+id/tv_currency_key"
+                        android:layout_marginTop="@dimen/d5"
+                        android:text="@string/account_balance"
+                        android:textColor="@color/white" />
+
+                    <TextView
+                        android:id="@+id/tv_balance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_currency_key"
+                        android:layout_marginLeft="@dimen/d10"
+                        android:layout_marginTop="@dimen/d5"
+                        android:layout_toRightOf="@+id/tv_balance_key"
+                        android:textColor="@color/orange_yellow"
+                        tools:text="1000000" />
+
+                    <ProgressBar
+                        android:id="@+id/pb_balance"
+                        android:layout_width="@dimen/d20"
+                        android:layout_height="@dimen/d20"
+                        android:layout_below="@+id/tv_currency_key"
+                        android:layout_marginLeft="@dimen/d24"
+                        android:layout_marginTop="@dimen/d5"
+                        android:layout_toRightOf="@+id/tv_balance_key"
+                        android:gravity="center"
+                        android:indeterminateTint="@color/orange_yellow"
+                        android:visibility="gone" />
+
+                    <TextView
+                        android:id="@+id/tv_account_address_key"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_balance_key"
+                        android:layout_marginTop="@dimen/d5"
+                        android:text="@string/my_account_address"
+                        android:textColor="@color/white" />
+
+                    <ImageView
+                        android:id="@+id/iv_qr_code"
+                        android:layout_width="@dimen/d150"
+                        android:layout_height="@dimen/d150"
+                        android:layout_below="@+id/tv_balance_key"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/d10"
+                        android:layout_marginTop="@dimen/d5"
+                        android:layout_toRightOf="@+id/tv_account_address_key" />
+
+                    <TextView
+                        android:id="@+id/tv_my_address"
+                        android:layout_width="@dimen/d200"
+                        android:layout_height="wrap_content"
+                        android:layout_alignLeft="@+id/iv_qr_code"
+                        android:layout_below="@+id/iv_qr_code"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/d5"
+                        android:gravity="center"
+                        android:textColor="@color/white" />
+                </RelativeLayout>
+
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d16"
+                android:text="@string/my_account"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_26" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="@dimen/d0"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/d162"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/d0"
+                android:layout_weight="1"
+                android:background="@color/grey">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_account_transaction_record"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_above="@+id/btn_loading_more"
+                    android:scrollbars="none"
+                    tools:listitem="@layout/item_transaction" />
+
+                <Button
+                    android:id="@+id/btn_loading_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/d30"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="@dimen/d5"
+                    android:background="@drawable/tv_button_selector"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:gravity="center"
+                    android:text="@string/show_more"
+                    android:textColor="@color/white"
+                    android:visibility="visible" />
+
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d16"
+                android:text="@string/transaction_records"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_26" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
