--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -7,13 +7,13 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/ivQRCode"
+        android:id="@+id/iv_qr_code"
         android:layout_width="@dimen/d200"
         android:layout_height="@dimen/d200"
         android:layout_gravity="center" />
 
     <TextView
-        android:id="@+id/tvMyAddress"
+        android:id="@+id/tv_my_address"
         style="@style/black_14_text_style"
         android:layout_height="wrap_content"
         android:layout_width="@dimen/d200"
