--- a/app/src/main/res/layout-land/tv_activity_home.xml
+++ b/app/src/main/res/layout-land/tv_activity_home.xml
@@ -16,7 +16,8 @@
     <RelativeLayout style="@style/tv_layout_bg">
 
         <LinearLayout
-            style="@style/tv_layout_bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <include layout="@layout/tv_include_header" />
@@ -55,7 +56,7 @@
                 <LinearLayout
                     android:layout_width="@dimen/d0"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/d100"
+                    android:layout_marginLeft="@dimen/d24"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:orientation="vertical">
