--- a/app/src/main/res/layout-land/tv_activity_send.xml
+++ b/app/src/main/res/layout-land/tv_activity_send.xml
@@ -16,13 +16,13 @@
     <RelativeLayout style="@style/tv_layout_bg">
 
         <LinearLayout
-            style="@style/tv_layout_bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <include layout="@layout/tv_include_header" />
 
             <LinearLayout
-                style="@style/tv_layout_style"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/d24"
@@ -30,43 +30,32 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    style="@style/tv_layout_style"
                     android:layout_width="@dimen/d0"
                     android:layout_height="match_parent"
                     android:layout_gravity="center|right"
-                    android:layout_marginTop="@dimen/d24"
                     android:layout_weight="1"
-                    android:gravity="center_horizontal"
+                    android:gravity="center"
                     android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/my_account"
-                        android:textColor="@color/red_da261f" />
 
                     <include layout="@layout/tv_include_account_info" />
                 </LinearLayout>
 
                 <LinearLayout
+                    style="@style/tv_layout_style"
                     android:layout_width="@dimen/d0"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/d20"
-                    android:layout_marginTop="@dimen/d24"
+                    android:layout_marginLeft="@dimen/d24"
                     android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:paddingLeft="@dimen/d24">
+
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/receive_account"
-                        android:textColor="@color/red_da261f" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        style="@style/white_16_text_style"
                         android:layout_marginTop="@dimen/d24"
-                        android:text="@string/account_address"
-                        android:textColor="@color/red_da261f" />
+                        android:text="@string/receive_account" />
 
                     <EditText
                         android:id="@+id/et_input_destination_address"
@@ -75,23 +64,21 @@
                         android:layout_height="@dimen/d35"
                         android:layout_centerVertical="true"
                         android:layout_marginBottom="@dimen/d16"
-                        android:layout_marginTop="@dimen/d16"
+                        android:layout_marginTop="@dimen/d8"
                         android:layout_toLeftOf="@+id/ib_scan_address"
                         android:background="@color/transparent"
                         android:cursorVisible="true"
+                        android:digits="@string/private_format"
                         android:hint="@string/please_enter_receive_account"
                         android:inputType="textMultiLine"
                         android:lineSpacingExtra="@dimen/d3"
-                        android:digits="@string/private_format"
                         android:maxLines="2"
                         android:textColorHint="@color/white"
                         android:textCursorDrawable="@drawable/edit_text_cursor_drawable" />
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/transaction_amount"
-                        android:textColor="@color/red_da261f" />
+                        style="@style/white_16_text_style"
+                        android:text="@string/transaction_amount" />
 
                     <EditText
                         android:id="@+id/et_transaction_amount"
@@ -101,7 +88,7 @@
                         android:layout_below="@+id/tv_transaction_amount_key"
                         android:layout_centerVertical="true"
                         android:layout_marginBottom="@dimen/d16"
-                        android:layout_marginTop="@dimen/d16"
+                        android:layout_marginTop="@dimen/d8"
                         android:layout_toLeftOf="@+id/ib_scan_address"
                         android:background="@color/transparent"
                         android:cursorVisible="true"
