--- a/app/src/main/res/layout-land/tv_activity_login.xml
+++ b/app/src/main/res/layout-land/tv_activity_login.xml
@@ -1,109 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
-    style="@style/tv_layout_bg"
-    android:orientation="horizontal">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_import_wallet"
-        android:layout_width="@dimen/d0"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginRight="@dimen/d10"
-        android:layout_weight="1"
-        android:elevation="@dimen/d12"
-        android:clickable="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:nextFocusLeft="@+id/cv_create_wallet"
-        android:nextFocusRight="@+id/cv_unlock_wallet"
-        android:padding="@dimen/d12"
-        android:translationZ="@dimen/d12"
-        app:cardCornerRadius="@dimen/d12"
-        app:cardElevation="@dimen/d12"
-        card_view:cardBackgroundColor="@color/light_green2"
-        card_view:cardCornerRadius="@dimen/d4">
+<io.bcaas.view.tv.MainUpLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/block_base_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/enter_password" />
+    <io.bcaas.view.tv.FlyBroadLayout
+        android:id="@+id/block_base_mainup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@mipmap/tv_block_select"
+        android:visibility="gone" />
 
-        <Button
-            android:id="@+id/btn_import_wallet"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/d48"
+    <LinearLayout
+        style="@style/tv_layout_bg"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/ll_import_wallet"
+            style="@style/tv_layout_style"
+            android:layout_width="@dimen/d0"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:text="@string/import_wallet" />
-    </android.support.v7.widget.CardView>
+            android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:nextFocusLeft="@+id/cv_create_wallet"
+            android:nextFocusRight="@+id/cv_unlock_wallet"
+            android:orientation="vertical"
+            android:padding="@dimen/d12">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_unlock_wallet"
-        android:layout_width="@dimen/d0"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_weight="1"
+            <TextView
+                android:id="@+id/tv_title"
+                style="@style/white_16_text_style"
+                android:layout_marginTop="@dimen/d20"
+                android:text="@string/private_key" />
 
-        android:elevation="@dimen/d12"
-        android:clickable="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:nextFocusLeft="@+id/cv_import_wallet"
-        android:nextFocusRight="@+id/cv_create_wallet"
-        android:padding="@dimen/d12"
-        android:translationZ="@dimen/d12"
-        app:cardCornerRadius="@dimen/d12"
-        app:cardElevation="@dimen/d12"
-        card_view:cardBackgroundColor="@color/light_green2"
-        card_view:cardCornerRadius="@dimen/d4">
+            <EditText
+                android:id="@+id/et_private_key"
+                style="@style/white_16_text_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d16"
+                android:digits="@string/private_format"
+                android:hint="@string/enter_private_key"
+                android:inputType="textMultiLine"
+                android:lineSpacingExtra="@dimen/d3"
+                android:maxLength="51"
+                android:maxLines="2"
+                android:textColorHint="@color/white" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/enter_password" />
+            <io.bcaas.view.edittext.PasswordEditText
+                android:id="@+id/pketPwd"
+                bcaas:hint="@string/password_rule_of_length"
+                bcaas:hintColor="@color/white70"
+                bcaas:textColor="@color/white"
+                bcaas:title="@string/set_password_for_your_wallet"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d20" />
 
-        <Button
-            android:id="@+id/btn_unlock_wallet"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/d48"
+            <io.bcaas.view.edittext.PasswordEditText
+                android:id="@+id/pketConfirmPwd"
+                bcaas:hint="@string/please_enter_password_again"
+                bcaas:hintColor="@color/white70"
+                bcaas:showLine="false"
+                bcaas:showTitle="false"
+                bcaas:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tv_password_rule"
+                style="@style/red_14_text_style"
+                android:layout_margin="@dimen/d12"
+                android:text="@string/remember_password" />
+
+            <Button
+                android:id="@+id/btn_import_wallet"
+                style="@style/tv_button_style"
+                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/d18"
+                android:clickable="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:text="@string/confirm" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_unlock_wallet"
+            style="@style/tv_layout_style"
+            android:layout_width="@dimen/d0"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:text="@string/unlock" />
-    </android.support.v7.widget.CardView>
+            android:layout_marginLeft="@dimen/d10"
+            android:layout_marginRight="@dimen/d10"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="center_vertical"
+            android:nextFocusLeft="@+id/cv_import_wallet"
+            android:nextFocusRight="@+id/cv_create_wallet"
+            android:orientation="vertical"
+            android:padding="@dimen/d12">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_create_wallet"
-        android:layout_width="@dimen/d0"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginLeft="@dimen/d10"
-        android:layout_weight="1"
-        android:elevation="@dimen/d12"
-        android:nextFocusLeft="@+id/cv_unlock_wallet"
-        android:nextFocusRight="@+id/cv_import_wallet"
-        android:padding="@dimen/d12"
-        android:translationZ="@dimen/d12"
-        android:clickable="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        app:cardCornerRadius="@dimen/d12"
-        app:cardElevation="@dimen/d12"
-        card_view:cardBackgroundColor="@color/light_green2"
-        card_view:cardCornerRadius="@dimen/d4">
+            <EditText
+                style="@style/white_16_text_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/enter_password"
+                android:textColorHint="@color/white" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/enter_password" />
+            <Button
+                android:id="@+id/btn_unlock_wallet"
+                style="@style/tv_button_style"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/d48"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/d24"
+                android:clickable="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center"
+                android:text="@string/unlock" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_create_wallet"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/d48"
+        <LinearLayout
+            android:id="@+id/ll_create_wallet"
+            style="@style/tv_layout_style"
+            android:layout_width="@dimen/d0"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:text="@string/create_wallet" />
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+            android:layout_weight="1"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="center_vertical"
+            android:nextFocusLeft="@+id/cv_unlock_wallet"
+            android:nextFocusRight="@+id/cv_import_wallet"
+            android:orientation="vertical"
+            android:padding="@dimen/d12">
+
+            <io.bcaas.view.edittext.PasswordEditText
+                android:id="@+id/pket_create_pwd"
+                bcaas:hint="@string/password_rule_of_length"
+                bcaas:hintColor="@color/white70"
+                bcaas:textColor="@color/white"
+                bcaas:title="@string/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d20" />
+
+            <io.bcaas.view.edittext.PasswordEditText
+                android:id="@+id/pket_create_confirm_pwd"
+                bcaas:hint="@string/please_enter_password_again"
+                bcaas:hintColor="@color/white70"
+                bcaas:showLine="false"
+                bcaas:showTitle="false"
+                bcaas:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/btn_create_wallet"
+                style="@style/tv_button_style"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/d48"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/d24"
+                android:clickable="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center"
+                android:text="@string/create_wallet" />
+        </LinearLayout>
+    </LinearLayout>
+</io.bcaas.view.tv.MainUpLayout>
