--- a/app/src/main/res/layout-land/tv_activity_login.xml
+++ b/app/src/main/res/layout-land/tv_activity_login.xml
@@ -25,11 +25,6 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:clickable="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:nextFocusLeft="@+id/cv_create_wallet"
-            android:nextFocusRight="@+id/cv_unlock_wallet"
             android:orientation="vertical"
             android:padding="@dimen/d12">
 
@@ -45,7 +40,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/d16"
+                android:clickable="true"
                 android:digits="@string/private_format"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:hint="@string/enter_private_key"
                 android:inputType="textMultiLine"
                 android:lineSpacingExtra="@dimen/d3"
@@ -55,23 +53,24 @@
 
             <io.bcaas.view.edittext.PasswordEditText
                 android:id="@+id/pketPwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d20"
+
                 bcaas:hint="@string/password_rule_of_length"
                 bcaas:hintColor="@color/white70"
                 bcaas:textColor="@color/white"
-                bcaas:title="@string/set_password_for_your_wallet"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/d20" />
+                bcaas:title="@string/set_password_for_your_wallet" />
 
             <io.bcaas.view.edittext.PasswordEditText
                 android:id="@+id/pketConfirmPwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 bcaas:hint="@string/please_enter_password_again"
                 bcaas:hintColor="@color/white70"
                 bcaas:showLine="false"
                 bcaas:showTitle="false"
-                bcaas:textColor="@color/white"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                bcaas:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/tv_password_rule"
@@ -99,12 +98,7 @@
             android:layout_marginLeft="@dimen/d10"
             android:layout_marginRight="@dimen/d10"
             android:layout_weight="1"
-            android:clickable="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:gravity="center_vertical"
-            android:nextFocusLeft="@+id/cv_import_wallet"
-            android:nextFocusRight="@+id/cv_create_wallet"
             android:orientation="vertical"
             android:padding="@dimen/d12">
 
@@ -112,6 +106,9 @@
                 style="@style/white_16_text_style"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:hint="@string/enter_password"
                 android:textColorHint="@color/white" />
 
@@ -136,34 +133,29 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:clickable="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:gravity="center_vertical"
-            android:nextFocusLeft="@+id/cv_unlock_wallet"
-            android:nextFocusRight="@+id/cv_import_wallet"
             android:orientation="vertical"
             android:padding="@dimen/d12">
 
             <io.bcaas.view.edittext.PasswordEditText
                 android:id="@+id/pket_create_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/d20"
                 bcaas:hint="@string/password_rule_of_length"
                 bcaas:hintColor="@color/white70"
                 bcaas:textColor="@color/white"
-                bcaas:title="@string/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/d20" />
+                bcaas:title="@string/password" />
 
             <io.bcaas.view.edittext.PasswordEditText
                 android:id="@+id/pket_create_confirm_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 bcaas:hint="@string/please_enter_password_again"
                 bcaas:hintColor="@color/white70"
                 bcaas:showLine="false"
                 bcaas:showTitle="false"
-                bcaas:textColor="@color/white"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                bcaas:textColor="@color/white" />
 
             <Button
                 android:id="@+id/btn_create_wallet"
