--- a/app/src/main/res/layout/include_edit_text_password.xml
+++ b/app/src/main/res/layout/include_edit_text_password.xml
@@ -23,6 +23,9 @@
             android:hint="@string/enter_password"
             android:inputType="textPassword"
             android:maxLength="16"
+            android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:paddingRight="@dimen/d40"
             android:singleLine="true" />
 
